--- a/product.css
+++ b/product.css
@@ -278,6 +278,75 @@ h5, h1, del{
     width: 450px;
 }
 
+#section3{
+    width: 100%;
+    height: 100vh;
+    /* padding: 10px; */
+    display: none;
+    background-color: rgba(33, 30, 30, 0.849);
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    padding-left: 330px;
+    padding-top: 220px;
+}
+
+#section3>div{
+    width: 50em;
+    height: 20em;
+    padding: 10px;
+    background-color: rgb(234, 234, 234);
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 10px;
+}
+
+
+.cross{
+    position: absolute;
+    top: 10%;
+    right: 20%;
+    width: 25px !important;
+    height: 25px !important;
+}
+
+#placeorder{
+    width: 200px;
+    height: 50px;
+    background-color: rgb(255, 149, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-weight: bold;
+}
+
+#placeorder:hover{
+    cursor: pointer;
+    transform: translateY(-5px);
+    box-shadow: 0px 5px 30px rgb(255, 149, 0);
+    transition: all 1s;
+}
+
+#finalimg{
+    width: 300px; 
+    height: 300px;
+}
+
+
+#NoItems, #NoItems>option{
+    width: 150px;
+    height: 30px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    padding: 0px 10px;
+    background-color: rgb(255, 149, 0);
+    color: white;
+}
+
 
 @media only screen and (max-width:360px){
     
@@ -641,6 +710,81 @@ h5, h1, del{
     height: 18px;
     cursor: pointer;
 
+}
+
+#section3{
+    width: 100%;
+    height: 100vh;
+    /* padding: 10px; */
+    display: none;
+    background-color: rgba(33, 30, 30, 0.849);
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    padding-left: 0px;
+    padding-top: 0px;
+}
+
+#section3>div{
+    width: 100%;
+    height: 120vh;
+    padding: 10px;
+    background-color: rgb(234, 234, 234);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+#section3>div>div{
+    height: 120vh;
+    z-index: 1;
+    background-color:  rgb(234, 234, 234);
+}
+
+
+.cross{
+    position: absolute;
+    top: 5%;
+    right: 10%;
+    width: 25px !important;
+    height: 25px !important;
+}
+
+#finalimg{
+    width: 335px; 
+    height: 335px;
+}
+
+#placeorder{
+    width: 200px;
+    height: 50px;
+    background-color: rgb(255, 149, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-weight: bold;
+}
+
+#placeorder:hover{
+    cursor: pointer;
+    transform: translateY(-5px);
+    box-shadow: 0px 5px 30px rgb(255, 149, 0);
+    transition: all 1s;
+}
+
+#NoItems, #NoItems>option{
+    width: 100px;
+    height: 30px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    padding: 0px 10px;
+    background-color: rgb(255, 149, 0);
+    color: white;
 }
 
 }
